[TACHYON-367] - Minor fixes to documention